Feature/remove deprecated code (#403)
* removed deprecated code + fixed some warnings

* removed deprecated code + renamed method